Add tuning parameters for vqgan

--- a/notebooks/model/vq-gan/min_gpt-huggingface_experimental_7.ipynb
+++ b/notebooks/model/vq-gan/min_gpt-huggingface_experimental_7.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "2bdff554-1c7e-422c-9c02-8e8a81c55d4f",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "5e0a6e7c-eeae-4bca-812f-8e026f046894",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "cb3820ac-31d6-4787-9994-ca6ed69bbe3d",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "ea3bca5d-ef9c-443f-aea0-f5d03fbc49a5",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "f0f493e5-3aea-42dd-b657-2e332e1d8afd",
    "metadata": {},
    "outputs": [
@@ -79,9 +79,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-07-18 02:08:56.940087: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2022-07-18 02:11:20.405372: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2022-07-18 02:08:57.324824: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1525] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 22297 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3090, pci bus id: 0000:25:00.0, compute capability: 8.6\n"
+      "2022-07-18 02:11:20.808562: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1525] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 22297 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3090, pci bus id: 0000:25:00.0, compute capability: 8.6\n"
      ]
     }
    ],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "6dc5e7fd-b6d4-4b78-9618-045075d125fc",
    "metadata": {},
    "outputs": [],
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "id": "3d3366cc-e9a8-406e-9756-6710171eb50d",
    "metadata": {},
    "outputs": [],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "d488cea1-b450-4620-9b82-9c7c7f859be2",
    "metadata": {},
    "outputs": [],
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "1b8c80d4-f55b-4934-991f-f890bbde5956",
    "metadata": {},
    "outputs": [],
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "78e1f5c5-e188-4d6c-95be-a3f988cd16ca",
    "metadata": {},
    "outputs": [],
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "7604a9a9-0bc1-4167-838f-5566966efedb",
    "metadata": {},
    "outputs": [],
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "fa2379e7-9bb0-46f6-bc7f-11f5197de55c",
    "metadata": {},
    "outputs": [],
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "62d1c5aa-84b8-4ae3-b6db-db4a433bcca4",
    "metadata": {},
    "outputs": [],
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "4d748166-e601-4cab-9605-3e126e10c4dd",
    "metadata": {
     "tags": []
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "9bdbbb77-4dfe-49d3-9ab5-8a2f82753ada",
    "metadata": {},
    "outputs": [],
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "581e67e5-bbf9-4cb2-815f-661061d15e25",
    "metadata": {},
    "outputs": [
@@ -396,7 +396,7 @@
        "array([15, 21,  5, 17, 26, 17, 19, 18], dtype=int32)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "dae3aaa8-b21d-47af-aa0b-e15b5bf97c9f",
    "metadata": {},
    "outputs": [
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "0a88e2d0-afb0-4f24-a515-c652bacc6045",
    "metadata": {},
    "outputs": [
@@ -1017,7 +1017,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1028,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "d4dd5890-87e0-4fad-8fa7-a3945daa8e13",
    "metadata": {},
    "outputs": [
@@ -1562,7 +1562,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1638,38 +1638,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "abc61700-6a55-41f2-8a22-05419f28f965",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Working with z of shape (1, 128, 8, 8) = 8192 dimensions.\n",
+      "VQLPIPSWithDiscriminator running with hinge loss.\n",
+      "using method  own_embeddings\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-07-18 02:11:34.551837: W tensorflow/python/util/util.cc:368] Sets are not currently considered sequences, but this may change in the future, so consider avoiding using them.\n",
+      "2022-07-18 02:11:35.217852: I tensorflow/stream_executor/cuda/cuda_blas.cc:1774] TensorFloat-32 will be used for the matrix multiplication. This will only be logged once.\n",
+      "All model checkpoint layers were used when initializing TFGPT2Model.\n",
+      "\n",
+      "Some layers of TFGPT2Model were not initialized from the model checkpoint at gpt2-medium and are newly initialized: ['transformer/weight:0']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    }
+   ],
    "source": [
     "with strategy.scope():\n",
     "    model = Net2Net(**cfg[\"model\"], trainer_config=cfg[\"train\"], num_replicas=strategy.num_replicas_in_sync)\n",
     "    #model.build(train_sample_data[\"y\"].shape)#first_stage_model.build(train_sample_data[\"y\"].shape[1:])\n",
     "    model.first_stage_model.build(train_sample_data[\"y\"].shape[1:])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "eaaa3f56-c20c-4c55-92c8-6714448bfcdf",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<transformers.models.gpt2.modeling_tf_gpt2.TFGPT2Model at 0x7f9714bb2970>"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.transformer.transformer"
    ]
   },
   {
