Add the style and vgg19 loss taken from the FILM paper

--- a/notebooks/model/vq-gan/vq-gan.ipynb
+++ b/notebooks/model/vq-gan/vq-gan.ipynb
@@ -343,6 +343,10 @@
    "execution_count": 22,
    "id": "a863bf49-2da7-484c-827e-0bda1db50bf7",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
