Test with data augmentation and upscale before discriminator

--- a/notebooks/model/vq-gan/min_gpt-huggingface.ipynb
+++ b/notebooks/model/vq-gan/min_gpt-huggingface.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "2bdff554-1c7e-422c-9c02-8e8a81c55d4f",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "5e0a6e7c-eeae-4bca-812f-8e026f046894",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "cb3820ac-31d6-4787-9994-ca6ed69bbe3d",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "ea3bca5d-ef9c-443f-aea0-f5d03fbc49a5",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "f0f493e5-3aea-42dd-b657-2e332e1d8afd",
    "metadata": {},
    "outputs": [
@@ -80,10 +80,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-07-25 04:53:05.031994: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2022-07-30 05:26:56.265162: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2022-07-25 04:53:05.781065: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1525] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 22297 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3090, pci bus id: 0000:01:00.0, compute capability: 8.6\n",
-      "2022-07-25 04:53:05.782286: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1525] Created device /job:localhost/replica:0/task:0/device:GPU:1 with 22297 MB memory:  -> device: 1, name: NVIDIA GeForce RTX 3090, pci bus id: 0000:e1:00.0, compute capability: 8.6\n"
+      "2022-07-30 05:26:56.690263: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1525] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 22297 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3090, pci bus id: 0000:01:00.0, compute capability: 8.6\n"
      ]
     }
    ],
@@ -107,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "6dc5e7fd-b6d4-4b78-9618-045075d125fc",
    "metadata": {},
    "outputs": [],
@@ -117,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "3d3366cc-e9a8-406e-9756-6710171eb50d",
    "metadata": {},
    "outputs": [],
@@ -132,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "d488cea1-b450-4620-9b82-9c7c7f859be2",
    "metadata": {},
    "outputs": [],
@@ -159,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "1b8c80d4-f55b-4934-991f-f890bbde5956",
    "metadata": {},
    "outputs": [],
@@ -268,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "78e1f5c5-e188-4d6c-95be-a3f988cd16ca",
    "metadata": {},
    "outputs": [],
@@ -5752,7 +5751,13 @@
       "Epoch 1620/2000\n",
       "34/34 [==============================] - 45s 1s/step - total_loss: 0.8251 - scce_loss: 0.5577 - perceptual_loss: 0.2674 - val_total_loss: 0.9372 - val_scce_loss: 0.6566 - val_perceptual_loss: 0.2806\n",
       "Epoch 1621/2000\n",
-      "20/34 [================>.............] - ETA: 13s - total_loss: 0.7331 - scce_loss: 0.4893 - perceptual_loss: 0.2438"
+      "34/34 [==============================] - 42s 1s/step - total_loss: 0.7160 - scce_loss: 0.4738 - perceptual_loss: 0.2423 - val_total_loss: 0.8436 - val_scce_loss: 0.5718 - val_perceptual_loss: 0.2718\n",
+      "Epoch 1622/2000\n",
+      "34/34 [==============================] - 46s 1s/step - total_loss: 0.7353 - scce_loss: 0.4878 - perceptual_loss: 0.2475 - val_total_loss: 0.9062 - val_scce_loss: 0.6276 - val_perceptual_loss: 0.2786\n",
+      "Epoch 1623/2000\n",
+      "34/34 [==============================] - 45s 1s/step - total_loss: 0.6787 - scce_loss: 0.4508 - perceptual_loss: 0.2279 - val_total_loss: 0.7965 - val_scce_loss: 0.5241 - val_perceptual_loss: 0.2723\n",
+      "Epoch 1624/2000\n",
+      "34/34 [==============================] - ETA: 0s - total_loss: 0.7158 - scce_loss: 0.4597 - perceptual_loss: 0.2562"
      ]
     }
    ],
