Various tests and retrain at 256x512 resolution

--- a/notebooks/model/vq-gan/vqgan_kny_image_full.ipynb
+++ b/notebooks/model/vq-gan/vqgan_kny_image_full.ipynb
@@ -41,7 +41,22 @@
    "execution_count": 4,
    "id": "9c5dfda8-24f9-4ca0-af11-45f54d1b8f48",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.8/dist-packages/tensorflow_addons/utils/ensure_tf_install.py:53: UserWarning: Tensorflow Addons supports using Python ops for all Tensorflow versions above or equal to 2.8.0 and strictly below 2.11.0 (nightly versions are not supported). \n",
+      " The versions of TensorFlow you are currently using is 2.7.0 and is not supported. \n",
+      "Some things might work, some things might not.\n",
+      "If you were to encounter a bug, do not file an issue.\n",
+      "If you want to make sure you're using a tested and supported configuration, either change the TensorFlow version or the TensorFlow Addons's version. \n",
+      "You can find the compatibility matrix in TensorFlow Addon's readme:\n",
+      "https://github.com/tensorflow/addons\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import omegaconf\n",
     "import numpy as np\n",
@@ -80,15 +95,6 @@
      "output_type": "stream",
      "text": [
       "INFO:tensorflow:Using MirroredStrategy with devices ('/job:localhost/replica:0/task:0/device:GPU:0',)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-08-12 02:16:09.869746: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2022-08-12 02:16:10.344817: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1525] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 22302 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3090, pci bus id: 0000:01:00.0, compute capability: 8.6\n"
      ]
     }
    ],
@@ -238,16 +244,7 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-08-12 02:16:20.959732: I tensorflow/core/kernels/data/shuffle_dataset_op.cc:380] Filling up shuffle buffer (this may take a while): 248932 of 310153\n",
-      "2022-08-12 02:16:24.136894: I tensorflow/core/kernels/data/shuffle_dataset_op.cc:405] Shuffle buffer filled.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_sample_data = next(train_ds\n",
     "                          .batch(sample_batch_size)\n",
@@ -315,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "id": "70c6cf30-c4bb-4bf1-a942-cdc944532b88",
    "metadata": {
     "tags": []
@@ -347,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "id": "637fe5ec-e9cf-496d-9daf-95456f867701",
    "metadata": {
     "tags": []
@@ -375,6 +372,10 @@
    "execution_count": null,
    "id": "e49d2c92-3443-406c-8f5e-4330bbe8cf7a",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -409,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "8ffe4de7-8df4-4278-8a37-d211763c7120",
    "metadata": {},
    "outputs": [],
@@ -555,7 +556,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
