--- a/notebooks/model/vq-gan/convert_to_tfrecord.ipynb
+++ b/notebooks/model/vq-gan/convert_to_tfrecord.ipynb
@@ -346,7 +346,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
